name: hfm
version: 1.0
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
stability: experimental

executable hfm
  hs-source-dirs:      .
  main-is:             Main.hs
  other-modules:       Hfm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , containers -any
  default-language:    Haskell2010

