name: hfm
version: 1.0
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
stability: experimental
description:
    d
x-ghc-framework-version: 7.10.3-5.18-1
x-last-ide-version: HfM1.3.0
Executable hfm
  main-is: Main.hs
  buildable: True
  build-depends:
      base >=4.7 && <5,
      containers -any
  default-language: Haskell2010
  hs-source-dirs: .
  other-modules:
      Hfm
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
